# auto-tuning-vllm

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  test_installation.py
.cursor/rules/: Cursor-Rules-InseeFrLab-auto-tuning-vllm.mdc
.github/workflows/: ci.yml
auto_tune_vllm/: __init__.py
auto_tune_vllm/benchmarks/: providers.py
auto_tune_vllm/cli/: __init__.py  main.py
auto_tune_vllm/core/: __init__.py  study_controller.py
auto_tune_vllm/execution/: backends.py  trial_controller.py
auto_tune_vllm/logging/: __init__.py  handlers.py  manager.py
auto_tune_vllm/utils/: __init__.py  grid_cardinality.py  vllm_cli_parser.py
docs/: configuration.md  quick_start.md  ray_auto_start.md  ray_cluster_setup.md
examples/: README_optimization_guide.md  basic_usage.py  study_config.yaml  study_config_local_exec.yaml  study_config_minimal.yaml  study_config_no_postgres.yaml  study_config_optimization_examples.yaml  test_defaults_config.yaml  trial_config_comprehensive.yaml  trial_config_version_specific.yaml
optuna_dashboard/: start_optuna_dashboard.sh  study.db
